Fix toXMLAttrsString - SourceFile/LineNumber tags may not exist